--- a/src/ROMdb/Views/LoginView.fxml
+++ b/src/ROMdb/Views/LoginView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.image.Image?>
@@ -43,16 +44,23 @@
                   <Label fx:id="label_loginmessage">
                      <VBox.margin>
                         <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </Label>
+                     </VBox.margin></Label>
                   <Button fx:id="button_login" mnemonicParsing="false" onAction="#loginButtonClicked" prefWidth="75.0" text="Login">
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets bottom="5.0" />
                      </VBox.margin>
                      <font>
                         <Font name="Times New Roman" size="13.0" />
                      </font>
                   </Button>
+                  <Hyperlink fx:id="hyperlink_forgotPassword" onAction="#forgotPasswordClicked" text="Forgot Password?" visible="false">
+                     <font>
+                        <Font name="Times New Roman" size="12.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="5.0" />
+                     </VBox.margin>
+                  </Hyperlink>
                </children>
             </VBox>
          </center>
