--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -442,7 +442,7 @@
                                                 <Font name="Times New Roman" size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="textField_header" maxWidth="600.0" minHeight="25.0" minWidth="400.0" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="field_header" maxWidth="600.0" minHeight="25.0" minWidth="400.0" HBox.hgrow="ALWAYS">
                                              <font>
                                                 <Font name="Times New Roman" size="12.0" />
                                              </font>
@@ -459,7 +459,7 @@
                                                 <Font name="Times New Roman" size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="textField_footer" maxWidth="600.0" minHeight="25.0" minWidth="400.0" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="field_footer" maxWidth="600.0" minHeight="25.0" minWidth="400.0" HBox.hgrow="ALWAYS">
                                              <font>
                                                 <Font name="Times New Roman" size="12.0" />
                                              </font>
