Finished applying new database to SCICR functionality.
Fixed no baseline selected on bootup problem: now all windows have data pre-loaded for first baseline on program start
Implemented pre-filtering of requirements data by currently selected baseline
Removed duplicate baseline filter on requirements page
Added label for mainmenu for the select baseline dropdown

--- a/src/ROMdb/Views/AddBaselineWindow.fxml
+++ b/src/ROMdb/Views/AddBaselineWindow.fxml
@@ -12,7 +12,7 @@
          <font>
             <Font name="Times New Roman" size="13.0" />
          </font></TextField>
-      <Button fx:id="button_cancelNewBaseline" layoutX="284.0" layoutY="222.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="76.0" text="Cancel">
+      <Button fx:id="button_cancelNewBaseline" layoutX="284.0" layoutY="222.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="76.0" text="Close">
          <font>
             <Font name="Times New Roman" size="13.0" />
          </font></Button>
