--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchor_requirements" maxHeight="5000.0" maxWidth="5000.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.RequirementsController">
+<AnchorPane fx:id="anchor_requirements" maxHeight="5000.0" maxWidth="5000.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.RequirementsController">
    <children>
       <BorderPane maxHeight="5000.0" maxWidth="5000.0" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: lightgrey;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -35,7 +35,7 @@
                                              <children>
                                                 <VBox alignment="CENTER">
                                                    <children>
-                                                      <Label prefHeight="17.0" prefWidth="52.0" text="Baseline:">
+                                                      <Label prefHeight="17.0" prefWidth="52.0" text="Baseline:" visible="false">
                                                          <VBox.margin>
                                                             <Insets />
                                                          </VBox.margin>
@@ -43,7 +43,7 @@
                                                             <Font name="Times New Roman" size="13.0" />
                                                          </font>
                                                       </Label>
-                                                      <ComboBox fx:id="combo_baseline" maxWidth="250.0" prefHeight="25.0" prefWidth="150.0">
+                                                      <ComboBox fx:id="combo_baseline" maxWidth="250.0" prefHeight="25.0" prefWidth="150.0" visible="false">
                                                          <VBox.margin>
                                                             <Insets />
                                                          </VBox.margin>
